[package]
name = "spacetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.0-rc.3", features = [
    "dynamic_linking",
    "file_watcher",
] }
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", branch = "bevy_0.16" }
bevy_asset_loader = "0.23.0-rc.1"
bevy_enhanced_input = "0.10.0-rc.3"
bitflags = "2.9.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
lyon_tessellation = "1.0.15"
parry2d = "0.20.1"
rand = "0.9.0"
