[package]
name = "spacetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
    "async_executor",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_state",
    "bevy_text",
    "bevy_render",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "vorbis",
    "webgl2",
    "tonemapping_luts",
] }
bevy_asset_loader = "0.23.0-rc.3"
bitflags = "2.9.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
lyon_tessellation = "1.0.15"
parry2d = "0.20.1"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[package.metadata.bevy_cli.native.dev]
features = [
    "bevy/dynamic_linking",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]
